Add data of 1909 excursions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,265 @@
     <h2>Data</h2>
     <ul>
       <li>
-        <p>des Tombe, F. A. (1911). Verslag der van 17 tot 21 Juli 1910 gehouden excursie in de omstreken van Tilburg en der daaraan verbonden Vergadering. <i>Nederlandsch Kruidkundig Archief, 22</i>, 44–62. <a href="https://www.biodiversitylibrary.org/page/4499705">Full text</a></p>
+        <p>Lako, D. (1910). Oostelijk Zeeuwsch Vlaanderen. Excursie 6—13 Aug. 1909. <i>Nederlandsch kruidkundig archief. Serie 3, 20</i>, 109–119. <a href="https://www.biodiversitylibrary.org/page/4499610">Full text</a></p>
+
+        <p>Series of excursions in Zeeuws Vlaanderen from August 6th to August 13th of 1909. Individual excursions are not listed. For many species, including some rare ones, no location was given:</p>
+
+        <details>
+          <ul>
+            <li><i>Ranunculus Flammula</i>: v. z. in de grensgemeenten</li>
+            <li><i>Ranunculus acris</i>: z. a.</li>
+            <li><i>Ranunculus repens</i>: z. a.</li>
+            <li><i>Ranunculus Philonotis</i>: z.</li>
+            <li><i>Ranunculus sceleratus</i>: v.</li>
+            <li><i>Papaver Rhoeas</i>: a.</li>
+            <li><i>Papaver Rhoeas genuinum</i>: a.</li>
+            <li><i>Chelidonium maius</i>: v.</li>
+            <li><i>Cardamine pratensis</i>: nog in enkele exemplaren</li>
+            <li><i>Sisymbrium officinale</i>: a.</li>
+            <li><i>Erysimum cheiranthoides</i>: v. z. op bouwland</li>
+            <li><i>Sinapis arvensis</i>: v.</li>
+            <li><i>Capsella bursa pastoris</i>: z. a.</li>
+            <li><i>Senebiera coronopus</i>: a.</li>
+            <li><i>Raphanus Raphanistrum</i>: v.</li>
+            <li><i>Viola tricolor</i>: v.</li>
+            <li><i>Viola tricolor arvensis</i>: v.</li>
+            <li><i>Lychnis flos cuculi</i>: nog in enkele exemplaren</li>
+            <li><i>Lychnis vespertina</i>: v.</li>
+            <li><i>Sagina procumbens</i>: v.</li>
+            <li><i>Lepigonum medium</i>: v. zilte gronden</li>
+            <li><i>Lepigonum marginatum</i>: v. z. zilte gronden</li>
+            <li><i>Arenaria serpyllifolia</i>: a.</li>
+            <li><i>Stellaria media</i>: z. a.</li>
+            <li><i>Stellaria graminea</i>: v. z. grensgemeenten</li>
+            <li><i>Cerastium triviale</i>: z. a.</li>
+            <li><i>Linum catarcticum</i>: v. z.</li>
+            <li><i>Malva silvestris</i>: v.</li>
+            <li><i>Malva vulgaris</i>: v.</li>
+            <li><i>Hypericum perforatum</i>: a.</li>
+            <li><i>Geranium pusillum</i>: v.</li>
+            <li><i>Geranium dissectum</i>: a.</li>
+            <li><i>Geranium molle</i>: a.</li>
+            <li><i>Oxalis stricta</i>: v.</li>
+            <li><i>Sarothamnus scoparius</i>: v. grensgemeenten</li>
+            <li><i>Ononis spinosa</i>: z. a.</li>
+            <li><i>Medicago lupulina</i>: z. a.</li>
+            <li><i>Trifolium procumbens</i>: a. ; voornamelijk de vorm major</li>
+            <li><i>Trifolium minus</i>: a.</li>
+            <li><i>Trifolium hybridum</i>: a. ; blijkt zich in de laatste 20 jaar hier overal verspreid te hebben</li>
+            <li><i>Trifolium repens</i>: z. a.</li>
+            <li><i>Trifolium fragiferum</i>: a.</li>
+            <li><i>Trifolium pratense</i>: z. a.</li>
+            <li><i>Lotus corniculatus</i>: a.</li>
+            <li><i>Lotus tenuifolius</i>: a.</li>
+            <li><i>Lotus uliginosus</i>: v. grensgemeenten is ook opgegeven tusschen Apel en Zaamslag.</li>
+            <li><i>Vicia cracca</i>: a.</li>
+            <li><i>Ervum tetraspermum</i>: v.</li>
+            <li><i>Lathyrus pratensis</i>: v. z.</li>
+            <li><i>Prunus spinosa</i>: aan wegen, in heggen</li>
+            <li><i>Rubus discolor</i>: a.</li>
+            <li><i>Rubus caesius</i>: a.</li>
+            <li><i>Potentilla anserina</i>: z. a.</li>
+            <li><i>Agrimonia Eupatoria</i>: z. a.</li>
+            <li><i>Rosa canina</i>: a.</li>
+            <li><i>Rosa canina vulgaris</i>: a.</li>
+            <li><i>Crataegus monogyna</i>: veel in heggen, ook als afzonderlijke struiken</li>
+            <li><i>Epilobium parviflorum</i>: a.</li>
+            <li><i>Epilobium tetragonum</i>: ?</li>
+            <li><i>Scleranthus annuus</i>: grensgemeenten v.</li>
+            <li><i>Sempervivum tectorum</i>: op daken</li>
+            <li><i>Hydrocotyle vulgaris</i>: grensgemeenten v.</li>
+            <li><i>Apium graveolens</i>: v.</li>
+            <li><i>Aegopoclium Podagraria</i>: a.</li>
+            <li><i>Oenanthe aquatica</i>: a.</li>
+            <li><i>Aethusa cynapium</i>: a.</li>
+            <li><i>Pastinaca sativa</i>: z. a</li>
+            <li><i>Daucus Carota</i>: z. a.</li>
+            <li><i>Torilis Anthriscus</i>: a.</li>
+            <li><i>Chaerophyllum temulum</i>: v.</li>
+            <li><i>Sambucus nigra</i>: v.</li>
+            <li><i>Sambucus nigra laciniata</i>: hier en daar in de buurt van woningen</li>
+            <li><i>Sherardia arvensis</i>: v. z.</li>
+            <li><i>Galium Aparine</i>: a.</li>
+            <li><i>Galium palustre</i>: v. a.</li>
+            <li><i>Galium verum</i>: v., zandgrond, dijken</li>
+            <li><i>Galium Mollugo</i>: v.</li>
+            <li><i>Dipsacus silvestris</i>: v.</li>
+            <li><i>Knautia arvensis</i>: v. z.</li>
+            <li><i>Eupatorium cannabinum</i>: v.</li>
+            <li><i>Bellis perennis</i>: z. a.</li>
+            <li><i>Aster Tripolium</i>: op zilte gronden a.</li>
+            <li><i>Gnaphalium uliginosum</i>: v. z.</li>
+            <li><i>Pulicaria dysenterica</i>: a.</li>
+            <li><i>Bidens tripartitus</i>: v.</li>
+            <li><i>Anthemis Cotula</i>: v. z.</li>
+            <li><i>Achillea millefolium</i>: z. a.</li>
+            <li><i>Matricaria Chamomilla</i>: z.a.</li>
+            <li><i>Chrysanthemum Leucanthemum</i>: a.</li>
+            <li><i>Tanacetum vulgare</i>: v.</li>
+            <li><i>Artemisia maritima</i>: langs de kust v.</li>
+            <li><i>Artemisia vulgaris</i>: v. a.</li>
+            <li><i>Tussilago Farfara</i>: a.</li>
+            <li><i>Senecio vulgaris</i>: z. a.</li>
+            <li><i>Senecio erucifolius</i>: a.</li>
+            <li><i>Senecio jacobaea</i>: a.</li>
+            <li><i>Lappa minor</i>: v.</li>
+            <li><i>Cirsium lanceolatum</i>: a.</li>
+            <li><i>Cirsium palustre</i>: v.</li>
+            <li><i>Cirsium arvense</i>: z. a.</li>
+            <li><i>Centaurea Jacea</i>: v. a. ; overal de vorm zonder straalbloemen en daardoor waarschijnlijk vroeger verward met C. nigra</li>
+            <li><i>Centaurea nigra</i>: v.</li>
+            <li><i>Centaurea Cyanus</i>: v.</li>
+            <li><i>Lapsana communis</i>: v.</li>
+            <li><i>Thrincia hirta</i>: v.</li>
+            <li><i>Leontodon autumnalis</i>: z. a.</li>
+            <li><i>Tragopogon pratensis</i>: v. ; steeds met neiging tot de var. minor</li>
+            <li><i>Hypochaeris radicata</i>: v. a.</li>
+            <li><i>Taraxacum officinale</i>: z. a.</li>
+            <li><i>Sonchus oleracea</i>: a.</li>
+            <li><i>Sonchus asper</i>: a.</li>
+            <li><i>Sonchus arvensis</i>: a.</li>
+            <li><i>Crepis virens</i>: z. a.</li>
+            <li><i>Hieracium Pilosella</i>: v.</li>
+            <li><i>Hieracium umbellatum</i>: v. z.</li>
+            <li><i>Jasione montana</i>: v. z.</li>
+            <li><i>Campanula rapunculus v.</i></li>
+            <li><i>Specularia speculum</i>: v. a.</li>
+            <li><i>Calluna vulgaris</i>: v. z., grensgemeenten</li>
+            <li><i>Erythraea pulchella</i>: v.</li>
+            <li><i>Convolvulus sepium</i>: a.</li>
+            <li><i>Convolvulus arvensis</i>: a.</li>
+            <li><i>Symphytum officinale</i>: a.</li>
+            <li><i>Myosotis hispida</i>: a.</li>
+            <li><i>Myosotis intermedia</i>: a. (?)</li>
+            <li><i>Solanum nigrum</i>: a.</li>
+            <li><i>Solanum Dulcamara</i>: v.</li>
+            <li><i>Linaria vulgaris</i>: v.</li>
+            <li><i>Veronica Chamaedrys</i>: nog in enkele exempl.</li>
+            <li><i>Veronica arvensis</i>: v.</li>
+            <li><i>Veronica agrestis</i>: v.</li>
+            <li><i>Veronica Buxbaumi</i>: v. a.</li>
+            <li><i>Rhinanthus maior</i>: a.</li>
+            <li><i>Euphrasia officinalis</i>: v. a. ; voor zoover nagegaan alles E. nemorosa</li>
+            <li><i>Euphrasia odontites</i>: a.</li>
+            <li><i>Orobanche minor</i>: v. z. op klavers</li>
+            <li><i>Mentha aquatica</i>: a.</li>
+            <li><i>Mentha arvensis</i>: a.</li>
+            <li><i>Lycopus europaeus</i>: v.</li>
+            <li><i>Origanum vulgare</i>: in de streek Hulst-Walsoorden vrij alg. verspr.</li>
+            <li><i>Thymus serpyllum</i>: v. z.</li>
+            <li><i>Glechoma hederacea</i>: z. a.</li>
+            <li><i>Lamium amplexicaule</i>: z.</li>
+            <li><i>Lamium purpureum</i>: v.</li>
+            <li><i>Lamium album</i>: a.</li>
+            <li><i>Galeopsis Tetrahit</i>: v. z.</li>
+            <li><i>Stachys palustris</i>: v.</li>
+            <li><i>Stachys arvensis</i>: v. z.</li>
+            <li><i>Brunella vulgaris</i>: z. a.</li>
+            <li><i>Teucrium scorodonia</i>: v.</li>
+            <li><i>Verbena officinalis</i>: v.</li>
+            <li><i>Anagallis arvensis</i>: z. a.</li>
+            <li><i>Lysimachia vulgaris</i>: v. z.</li>
+            <li><i>Lysimachia nummularia</i>: v.</li>
+            <li><i>Glaux maritima</i>: op zilte gronden a.</li>
+            <li><i>Statice Limonium</i>: langs de kust op de schorren</li>
+            <li><i>Plantage maior</i>: z. a.</li>
+            <li><i>Plantage media</i>: v. z.</li>
+            <li><i>Plantage lanceolata</i>: z. a.</li>
+            <li><i>Plantage maritima</i>: v. z.</li>
+            <li><i>Suaeda maritima</i>: v. z. behalve langs de kust</li>
+            <li><i>Salicornia herbacea</i>: v. z. behalve op de schorren.</li>
+            <li><i>Chenopodium album</i>: z. a.</li>
+            <li><i>Halimus portulacoides</i>: langs de kust</li>
+            <li><i>Atriplex patuia</i>: v.</li>
+            <li><i>Atriplex latifolia</i>: a.</li>
+            <li><i>Rumex palustris</i>: v.</li>
+            <li><i>Rumex obtusifolius</i>: v.</li>
+            <li><i>Rumex conglomeratus</i>: z. a.</li>
+            <li><i>Rumex crispus</i>: z. a.</li>
+            <li><i>Rumex acetosa</i>: a.</li>
+            <li><i>Rumex acetosella</i>: v. a., vooral op zandgrond.</li>
+            <li><i>Polygonum amphibium</i>: v.</li>
+            <li><i>Polygonum pallidum</i>: a.</li>
+            <li><i>Polygonum pallidum vulgatum</i>: v.</li>
+            <li><i>Polygonum Persicaria</i>: z. a.</li>
+            <li><i>Polygonum Hydropiper</i>: grensgemeenten v.</li>
+            <li><i>Polygonum aviculare</i>: z. a.</li>
+            <li><i>Polygonum Convolvulus</i>: z. a.</li>
+            <li><i>Euphorbia helioscopia</i>: a.</li>
+            <li><i>Euphorbia exigua</i>: a.</li>
+            <li><i>Euphorbia Peplus</i>: a.</li>
+            <li><i>Mercurialis annua</i>: v.</li>
+            <li><i>Urtica urens</i>: a.</li>
+            <li><i>Urtica dioica</i>: z. a.</li>
+            <li><i>Humulus Lupulus</i>: v.</li>
+            <li><i>Alnus glutinosa</i>: v.</li>
+            <li><i>Salix cinerea</i>: v. a.</li>
+            <li><i>Alisma Plantago</i>: a.</li>
+            <li><i>Triglochin maritima</i>: op zilte gronden v. a.</li>
+            <li><i>Triglochin palustre</i>: v. z.</li>
+            <li><i>Potamogeton pectinatus</i>: v.</li>
+            <li><i>Lemna trisulca</i>: a.</li>
+            <li><i>Lemna minor</i>: z. a.</li>
+            <li><i>Lemna gibba</i>: a.</li>
+            <li><i>Sparganium ramosum</i>: v.</li>
+            <li><i>Iris Pseudacorus</i>: v. z.</li>
+            <li><i>Juncus effusus</i>: a.</li>
+            <li><i>Juncus glaucus</i>: z. a.</li>
+            <li><i>Juncus lamprocarpus</i>: v.</li>
+            <li><i>Juncus Gerardi</i>: a.</li>
+            <li><i>Juncus bufonius</i>: a.</li>
+            <li><i>Luzula canipestris</i>: nog in enkele exemplaren</li>
+            <li><i>Heleocharis palustris</i>: v. z.</li>
+            <li><i>Scirpus Tabernaemontani</i>: a.</li>
+            <li><i>Scirpus maritimus</i>: z. a.</li>
+            <li><i>Carex vulpina</i>: a.</li>
+            <li><i>Carex acuta</i>: nog in enkele exemplaren</li>
+            <li><i>Phalaris arundinacea</i>: v.</li>
+            <li><i>Anthoxanthum odoratum</i>: a.</li>
+            <li><i>Alopecurus pratensis</i>: nog in enkele exemplaren</li>
+            <li><i>Alopecurus agrestis</i>: z. a.</li>
+            <li><i>Alopecurus geniculatus</i>: v. z.</li>
+            <li><i>Phleum pratense</i>: a</li>
+            <li><i>Agrostis alba</i>: a.</li>
+            <li><i>Agrostis vulgaris</i>: a.</li>
+            <li><i>Apera Spica venti</i>: z. a.</li>
+            <li><i>Phragmites communis</i>: z. a.</li>
+            <li><i>Holcus lanatus</i>: z. a.</li>
+            <li><i>Holcus mollis</i>: grensgemeenten v. z.</li>
+            <li><i>Arrhenatherum elatius</i>: a.</li>
+            <li><i>Avena flavescens</i>: a.</li>
+            <li><i>Avena caryophyllea</i>: v.</li>
+            <li><i>Poa annua</i>: z. a.</li>
+            <li><i>Poa trivialis</i>: v.</li>
+            <li><i>Poa pratensis</i>: a.</li>
+            <li><i>Glyceria fluitans</i>: a.</li>
+            <li><i>Glyceria distans</i>: a.</li>
+            <li><i>Glyceria maritima</i>: v.</li>
+            <li><i>Dactylis glomerata</i>: z. a.</li>
+            <li><i>Cynosurus cristatus</i>: z. a.</li>
+            <li><i>Festuca ovina</i>: z., grensgemeenten</li>
+            <li><i>Festuca rubra</i>: v.</li>
+            <li><i>Festuca arundinacea</i>: a.</li>
+            <li><i>Bromus mollis</i>: z. a.</li>
+            <li><i>Bromus sterilis</i>: v.</li>
+            <li><i>Triticum repens</i>: a.</li>
+            <li><i>Triticum repens vulgare</i>: a.</li>
+            <li><i>Triticum repens glaucum</i>: a</li>
+            <li><i>Hordeum murinum</i>: a.</li>
+            <li><i>Hordeum secalinum</i>: a.</li>
+            <li><i>Lolium perenne</i>: z. a.</li>
+            <li><i>Equisetum arvense</i>: z. a.</li>
+            <li><i>Equisetum palustre</i>: z. a.</li>
+            <li><i>Polypodium vulgare</i>: v. z.</li>
+            <li><i>Asplenium Filix femina</i>: v.</li>
+          </ul>
+        </details>
+
+        <p>For the plants with locations: <a href="view.html?zeeuws_vlaanderen-1909&amp;center=[51.3,4.0]&amp;zoom=12">Map</a> &amp; <a href="data/zeeuws_vlaanderen-1909.json">data</a></p>
+      </li>
+      <li>
+        <p>des Tombe, F. A. (1911). Verslag der van 17 tot 21 Juli 1910 gehouden excursie in de omstreken van Tilburg en der daaraan verbonden Vergadering. <i>Nederlandsch Kruidkundig Archief. Serie 3, 21</i>, 44–62. <a href="https://www.biodiversitylibrary.org/page/4499705">Full text</a></p>
 
         <p>Series of excursions near Tilburg. The first excursion, July 17th 1910, was attended by Prof. Dr. G. van Iterson, P. J. M. Schuijt, K. Tjebbes, Dr. L. Vuyck, Dr. Th. Weevers and F. A. des Tombe; the rest were attended by D. Lako, Dr. L. Vuyck, and F. A. des Tombe. The plant list also contains data on two preliminary excursions, May 14th and 15th 1910, both attended by F. A. des Tombe.</p>
 
@@ -274,7 +532,7 @@
         <p>For the plants with locations: <a href="view.html?tilburg-1910&amp;tilburg-1910-routes&amp;center=[51.56,5.1]&amp;zoom=12">Map</a> &amp; <a href="data/tilburg-1910.json">data</a></p>
       </li>
       <li>
-        <p>Nederlandsche Botanische Vereeniging. (1912). Verslag der in Augustus 1911 gehouden excursies. <i>Nederlandsch kruidkundig archief, 22</i>, 56–66. <a href="https://www.biodiversitylibrary.org/page/4499843">Full text</a></p>
+        <p>Nederlandsche Botanische Vereeniging. (1912). Verslag der in Augustus 1911 gehouden excursies. <i>Nederlandsch kruidkundig archief. Serie 3, 22</i>, 56–66. <a href="https://www.biodiversitylibrary.org/page/4499843">Full text</a></p>
 
         <p>Series of excursions around Raamsdonksveer between the 15th and 17th of August, 1911, attended by Goethart, Lako, Pulle, Quarles van Ufford and Schuijt. Data from an earlier excursion May 14th 1911 attended by Pulle and Schuijt was included.</p>
 
