Improve interface for long popups

--- a/view.html
+++ b/view.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge, chrome=1" />
     <title>Biodiversity data from the Nederlands Kruidkundig Archief</title>
-    <style>body { margin: 0; }</style>
+    <style>body { margin: 0; } .leaflet-popup-content { max-height: 50vh; overflow-y: auto; }</style>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
       integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
       crossorigin=""/>
