--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <li>1915: Doetinchem <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/4" target="_blank">(not yet available)</a></li>
       <li>1916: Breda <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/8" target="_blank">(not yet available)</a></li>
       <li>1917: Meppel <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/5" target="_blank">(not yet available)</a></li>
-      <li>1918: 's Hertogenbosch <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/6" target="_blank">(not yet available)</a></li>
+      <li><a href="#s_hertogenbosch-1918">1918: 's Hertogenbosch</a></li>
       <li>1919: Nijmegen <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/7" target="_blank">(not yet available)</a></li>
       <li>1920: Ter Apel <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/9" target="_blank">(not yet available)</a></li>
       <li>1921: Arcen <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/10" target="_blank">(not yet available)</a></li>
@@ -702,6 +702,181 @@
     </details>
 
     <p>For the plants with locations: <a href="view.html?raamsdonksveer-1911&amp;raamsdonksveer-1911-routes&amp;center=[51.68,4.9]&amp;zoom=12">Map</a> &amp; <a href="data/raamsdonksveer-1911.json">data</a></p>
+
+    <h3 id="s_hertogenbosch-1918">1918: 's Hertogenbosch</h3>
+
+    <blockquote>Vuyck, L. (1919). Verslag der Excursie, gehouden te ’s-Hertogenbosch op 26 Juli 1918 en volgende dagen. <i>Nederlandsch kruidkundig archief. Serie 3, 28</i>, 19&ndash;30. <a href="https://www.biodiversitylibrary.org/page/34363815">Full text</a></blockquote>
+
+    <p>Series of excursions around Raamsdonksveer between the 27th to 29th of August, 1918, attended by Brand, van Goor, Henrard, Jansen, Schuyt, en Vuyck.</p>
+
+    <ul>
+      <li>July 27th 1918: Station Waalwijk - Sprang - Kaatsheuvel - Loon op Zand - de Ruiterbaan - Loon op Zand</li>
+      <li>July 28th 1918: Halte Esch - St. Michiels Gestel - Zegenwerp - Haaghoek - Boxtel</li>
+      <li>July 29th 1918: Station Helvoirt - Groot en Klein Laar - Hengstven - Vught</li>
+    </ul>
+
+    <details>
+      <li><i>Achillea Millefolium</i>: z.a.</li>
+      <li><i>Aegopodium</i>: a.</li>
+      <li><i>Agrostis alba</i>: z.a.</li>
+      <li><i>Agrostis canina</i>: a.</li>
+      <li><i>Agrostis vulgaris</i>: a.</li>
+      <li><i>Aira caespitosa</i>: v.a.</li>
+      <li><i>Aira flexaosa</i>: a.</li>
+      <li><i>Alisma Plantago</i>: a.</li>
+      <li><i>Alnus glutinosus</i>: v.a.</li>
+      <li><i>Anthoxanthum odoratum</i>: z.a.</li>
+      <li><i>Apera Spica venti</i>: a.</li>
+      <li><i>Arnoseris</i>: a.</li>
+      <li><i>Bellis perennis</i>: z.a.</li>
+      <li><i>Betula verrucosa</i>: v.a.</li>
+      <li><i>Bromus mollis</i>: z.a.</li>
+      <li><i>Calamagrostis lanceolata</i>: v.a.</li>
+      <li><i>Calluna</i>: z.a.</li>
+      <li><i>Campanula rotundifolia</i>: z.a.</li>
+      <li><i>Capsella</i>: z.a.</li>
+      <li><i>Carex arenaria</i>: v.a.</li>
+      <li><i>Centaurea Cyanea</i>: v.a.</li>
+      <li><i>Centaurea Jacea</i>: a.</li>
+      <li><i>Cerastium triviale</i>: z.a.</li>
+      <li><i>Chenopodium album</i>: z.a.</li>
+      <li><i>Chrysanthemum Leucanthemum</i>: z.a.</li>
+      <li><i>Chrysanthemum segetum</i>: a.</li>
+      <li><i>Cirsium palustre</i>: v.a.</li>
+      <li><i>Comarum</i>: a.</li>
+      <li><i>Convolvulus sepium</i>: z.a.</li>
+      <li><i>Corynephorus</i>: z.a.</li>
+      <li><i>Crepis virens</i>: a.</li>
+      <li><i>Cuscuta Epithymum</i>: a.</li>
+      <li><i>Dactylis</i>: v.a.</li>
+      <li><i>Daucus v.a.</i></li>
+      <li><i>Drosera intermedia</i>: v.a.</li>
+      <li><i>Drosera rotundifolia</i>: v.a.</li>
+      <li><i>Equisetum arvense</i>: v.a.</li>
+      <li><i>Equisetum limosum</i>: v.a.</li>
+      <li><i>Erica</i>: z.a.</li>
+      <li><i>Erigeron canadensis</i>: v.a.</li>
+      <li><i>Eriophorum polystachyum</i>: v.a.</li>
+      <li><i>Erodium pimpinellifolium</i>: a.</li>
+      <li><i>Erysimum cheiranthoides</i>: v.a.</li>
+      <li><i>Erythraea Centaurium</i>: v.a.</li>
+      <li><i>Festuca elatior</i>: niet a.</li>
+      <li><i>Festuca ovina</i>: v.a.</li>
+      <li><i>Galeopsis ochroleuca</i>: a.</li>
+      <li><i>Galeopsis Tetrahit</i>: z.a.</li>
+      <li><i>Galium palustre</i>: a.</li>
+      <li><i>Genista anglica</i>: v.a.</li>
+      <li><i>Genista pilosa</i>: v.a.</li>
+      <li><i>Glechoma</i>: z.a.</li>
+      <li><i>Glyceria fluitans</i>: a.</li>
+      <li><i>Glyceria spectabilis</i>: v.a.</li>
+      <li><i>Gnaphalium uliginosum</i>: a.</li>
+      <li><i>Heracleum</i>: a.</li>
+      <li><i>Hieracium Pilosella</i>: z.a.</li>
+      <li><i>Hieracium tridentatum</i>: a.</li>
+      <li><i>Hieracium umbellatum</i>: z.a.</li>
+      <li><i>Holcus lanatus</i>: z.a.</li>
+      <li><i>Holcus mollis</i>: z.a.</li>
+      <li><i>Humulus</i>: v.a.</li>
+      <li><i>Hydrocotyle</i>: z.a.</li>
+      <li><i>Hypericum Elodes</i>: a.</li>
+      <li><i>Hieracium perforatum</i>: z.a.</li>
+      <li><i>Hypochoeris radicata</i>: z.a.</li>
+      <li><i>Illecebrum</i>: v.a.</li>
+      <li><i>Iris Pseudacorus</i>: a.</li>
+      <li><i>Jasione</i>: z.a.</li>
+      <li><i>Juncus bufonius</i>: z.a.</li>
+      <li><i>Juncus conglomeratus</i>: a.</li>
+      <li><i>Juncus effusus</i>: z.a.</li>
+      <li><i>Juncus lamprocarpus</i>: v.a.</li>
+      <li><i>Juncus squarrosus</i>: a.</li>
+      <li><i>Juncus supinus</i>: a.</li>
+      <li><i>Juncus sylvaticus</i>: a.</li>
+      <li><i>Juncus tenuis</i>: z.a.</li>
+      <li><i>Lamium album z.a.</i></li>
+      <li><i>Linaria vulgaris</i>: z.a.</li>
+      <li><i>Lolium perenne</i>: z.a.</li>
+      <li><i>Lonicera</i>: a.</li>
+      <li><i>Lotus uliginosus</i>: z.a.</li>
+      <li><i>Lychnis diurna</i>: a.</li>
+      <li><i>Lychnis Flos cuculi</i>: a.</li>
+      <li><i>Lycopus</i>: a.</li>
+      <li><i>Lysimachia Nummularia</i>: a.</li>
+      <li><i>Lysimachia vulgaris</i>: z.a.</li>
+      <li><i>Lythrum</i>: z.a.</li>
+      <li><i>Melampyrum pratense</i>: v.a.</li>
+      <li><i>Mentha arvensis</i>: a.</li>
+      <li><i>Molinia</i>: z.a.</li>
+      <li><i>Myosotis palustris</i>: v.a.</li>
+      <li><i>Myrica</i>: z.a.</li>
+      <li><i>Nardus</i>: z.a.</li>
+      <li><i>Nymphaea</i>: z.a.</li>
+      <li><i>Oenanthe Phellandrii</i>: a.</li>
+      <li><i>Ornithopus</i>: z.a.</li>
+      <li><i>Oxalis stricta</i>: a.</li>
+      <li><i>Panicum Crus Galli</i>: a.</li>
+      <li><i>Panicum lineare</i>: v.a.</li>
+      <li><i>Papaver Rhoeas</i>: v.a.</li>
+      <li><i>Phalaris arundinacea</i>: a.</li>
+      <li><i>Phleum pratense</i>: v.a.</li>
+      <li><i>Phragmites</i>: z.a.</li>
+      <li><i>Plantago lanceolata</i>: z.a.</li>
+      <li><i>Plantago mayor</i>: z.a.</li>
+      <li><i>Poa annua</i>: z.a.</li>
+      <li><i>Poa pratensis</i>: v.a.</li>
+      <li><i>Polygonum amphibium</i>: a.</li>
+      <li><i>Polygonum aviculare</i>: z.a.</li>
+      <li><i>Polygonum Convolvulus</i>: a.</li>
+      <li><i>Polygonum lapathifolium</i>: z.a.</li>
+      <li><i>Polygonum Persicaria</i>: z.a.</li>
+      <li><i>Polypodium</i>: v.a.</li>
+      <li><i>Polystichum Filix mas</i>: v.a.</li>
+      <li><i>Potentilla anserina</i>: z.a.</li>
+      <li><i>Potentilla Tormentilla</i>: z.a.</li>
+      <li><i>Prunella</i>: z.a.</li>
+      <li><i>Pteris</i>: v.a.</li>
+      <li><i>Quercus</i>: opslag</li>
+      <li><i>Ranunculus acris</i>: z.a.</li>
+      <li><i>Ranunculus Flammula</i>: z.a.</li>
+      <li><i>Ranunculus repens</i>: z.a.</li>
+      <li><i>Raphanus raphanistrum</i>: v.a.</li>
+      <li><i>Rhamnus Frangula</i>: z.a.</li>
+      <li><i>Rhynchospora alba</i></li>
+      <li><i>Rumex Acetosa</i>: z.a.</li>
+      <li><i>Rumex Acetosella</i>: z.a.</li>
+      <li><i>Rumex obtusifolius</i>: a.</li>
+      <li><i>Salix amygdalina</i>: v.a.</li>
+      <li><i>Salix aurita</i>: a.</li>
+      <li><i>Salix cinerea</i>: a.</li>
+      <li><i>Salix repens</i>: z.a.</li>
+      <li><i>Sarothamnus</i>: z.a.</li>
+      <li><i>Scirpus caespitosus</i>: v.a.</li>
+      <li><i>Scleranthus annuus</i>: z.a.</li>
+      <li><i>Senecio Jacobea</i>: a.</li>
+      <li><i>Senecio sylvatica</i>: z.a.</li>
+      <li><i>Senecio vulgaris</i>: a.</li>
+      <li><i>Sisymbrium officinale</i>: z.a.</li>
+      <li><i>Solanum nigrum</i>: a.</li>
+      <li><i>Sorbus</i>: z.a.</li>
+      <li><i>Spergula arvensis</i>: a.</li>
+      <li><i>Spiraea Ulmaria</i>: a.</li>
+      <li><i>Stellaria media</i>: z.a.</li>
+      <li><i>Succisa</i>: v.a.</li>
+      <li><i>Tanacetum</i>: a.</li>
+      <li><i>Taraxacum</i>: z.a.</li>
+      <li><i>Teesdalia</i>: a.</li>
+      <li><i>Trifolium minus</i>: z.a.</li>
+      <li><i>Trifolium pratensis</i>: z.a.</li>
+      <li><i>Trifolium repens</i>: z.a.</li>
+      <li><i>Triodia</i>: z.a.</li>
+      <li><i>Triticum repens</i>: a.</li>
+      <li><i>Urtica dioica</i>: z.a.</li>
+      <li><i>Urtica urens</i>: a.</li>
+      <li><i>Vicia Cracca</i>: a.</li>
+      <li><i>Viola tricolor</i>: z.a.</li>
+    </details>
+
+    <p>For the plants with locations: <a href="view.html?s_hertogenbosch-1918&amp;s_hertogenbosch-1918-routes&amp;center=[51.65,5.2]&amp;zoom=12">Map</a> &amp; <a href="data/s_hertogenbosch-1918.json">data</a></p>
 
     <h2 id="goethart-jongmans-notation">Goethart &amp; Jongmans notation</h2>
     <p>As I could not find an online source documenting this notation, I thought I would describe it here. Locations look like this:</p>
